--- a/docs/assignment561/fe561.Rmd
+++ b/docs/assignment561/fe561.Rmd
@@ -84,15 +84,17 @@ sqrt(3)/2
 
 Let x is the number of draws. When $x=1,3,5,7..$, the probability of achieving this goal is 0. When $x=2,4,6,8..$, the probability of achieving this goal is $\frac14$. 
 
-let $y=\frac{x}2$. For $Y\sim Geometric(\frac14)$
+let $Y=\frac{X}2$. For $Y\sim Geometric(\frac14)$
 
 $$f_Y(y)=\frac14(1-\frac14)^{y-1}=\frac13(\frac34)^{y}=\frac13(\frac34)^{\frac{x}2}, x=2,4,6..$$
 
 $$f_X(x)=\begin{cases}\frac13(\frac34)^{\frac{x}2}& x=2,4,6..\\ 0 & x=1,3,5.. \end{cases}$$
 
-Because the mean and variance of Geometric function just related with p, thus
+Because Y is a Geometric function, the mean and variance are
 
-$$E[X]=\frac{1}p=4;\quad Var[X]=\frac{1-p}{p^2}=12$$
+$$E[Y]=\frac{1}p=4=E[\frac{X}2]=\frac{E[X]}2\implies E[X]=8$$
+
+$$Var[Y]=\frac{1-p}{p^2}=12=Var[\frac{X}2]=\frac{Var[X]}4\implies Var[X]=48$$
 
 ****
 
@@ -153,7 +155,9 @@ $$\therefore c=(1-p)^{1-a}$$
 $$f_X(x)=\begin{cases}p(1-p)^{(x+1-a)-1} & x+1-a=1,2,3..\\0 & otherwise\end{cases}$$
 Which still is a Geometric function.
 
-$$E(X)=\frac1p;\quad Var(X)=\frac{1-p}{p^2}$$
+$$E(x+1-a)=E(x)+1-a=\frac1p \implies E(x)=\frac1p+a-1$$
+
+$$Var(x+1-a)=Var(x)=\frac{1-p}{p^2}$$
 
 ****
 
