--- a/static/assignment564/lab00.Rmd
+++ b/static/assignment564/lab00.Rmd
@@ -839,7 +839,7 @@ Coefficient of 1.935 suggests the average sale price of houses increases by $ 1.
 
 72.93% About 72.93% of variation in predicting the sale price of houses in Erie, Pennsylvania.
 
-```{r, eval=T, include = T}
+```{r, eval=F, include = T}
 deviation <- table_b4$y-mean(table_b4$y)
 
 # Predit_Power=1-(PRESS.stat/SST)
