--- a/docs/assignment564/fe564.Rmd
+++ b/docs/assignment564/fe564.Rmd
@@ -113,7 +113,7 @@ x7 : Infiltration rate of water into soil (inches/hour)
 x8 : Rainfall (inches)   
 x9 : Time period during which rainfall exceeded ¼ inch/hour  
 
-```{r, eval=T, include = F}
+```{r, eval=T, include = T}
 # Load the package 
 library(readxl)
 library(tidyverse)
@@ -129,7 +129,7 @@ summary(table_wf)
 
 (a) Create the matrix of scatterplots and compute the correlation matrix for all the variables. Copy and paste them here.
 
-```{r, include = F}
+```{r, include = T}
 library(GGally)
 ggpairs(data=table_wf[c(1:10)])
 
@@ -141,7 +141,7 @@ The scatterplots of y versus x1, x3, and x4 show a medium to strong positive lin
 
 (c) Fit the full model.
 
-```{r, eval=T, include = F}
+```{r, eval=T, include = T}
 # build the model
 model_wf_full <- lm(y ~ X1 + X2 + X3 + X4 + X5 + X6 + X7 + X8 + X9, data=table_wf)
 model_wf_full%>% summary()
@@ -193,7 +193,7 @@ It is better to remove x7 first and check whether the multicollinearity is solve
 
 (d) Create a new variable using natural log of response. Then fit the full model using this new variable as response.
 
-```{r, eval=T, include = F}
+```{r, eval=T, include = T}
 model_wf_full_log <- lm(log(y) ~ X1 + X2 + X3 + X4 + X5 + X6 + X7 + X8 + X9, data=table_wf)
 model_wf_full_log%>% summary()
 ```
@@ -205,7 +205,7 @@ The fitted model is statistically significant at 5% significance level (p value 
 
 (2) Explain whether there is a problem of multicollinearity.
 
-```{r, eval=T, include = F}
+```{r, eval=T, include = T}
 vif(model_wf_full_log)
 ols_vif_tol(model_wf_full_log)
 
@@ -224,7 +224,7 @@ There is a problem of multicollinearity.
 
 (3) If you wanted to simplify this full model, explain which predictor you would eliminate first.
 
-```{r, eval=T, include = F}
+```{r, eval=T, include = T}
 plot(model_wf_full_log,pch=16,col="blue")
 
 avPlots(model_wf_full_log)
@@ -247,7 +247,7 @@ ggpairs(data=table_wf_resi[c(1:11)])
 
 (4) Use the forward selection method to find the best model (use α=0.15) and report the final fitted model with estimated coefficients here.
 
-```{r, eval=T, include = F}
+```{r, eval=T, include = T}
 # Forward Selection Regression #
 model_wf_none <- lm (log(y) ~ 1, data = table_wf)
 step(model_wf_none, direction= "forward", scope=(~ X1 + X2 + X3 + X4 + X5 + X6 + X7 + X8 + X9), k=2)
@@ -260,7 +260,7 @@ ols_step_forward_p(model_wf_full_log, penter = 0.15)
 
 (5) Use the backward elimination method to find the best model (use α=0.05) and report the final fitted model with estimated coefficients here.
 
-```{r, eval=T, include = F}
+```{r, eval=T, include = T}
 # Backward Elimination Regression #
 step(model_wf_full_log, direction = "backward")
 
@@ -271,7 +271,7 @@ ols_step_backward_p(model_wf_full_log, penter = 0.05)
 
 (6) Use best subsets method (6 models from each size) to find the best model for these data and report the final fitted model with estimated coefficients here.
 
-```{r, eval=T, include = F}
+```{r, eval=T, include = T}
 # Subset method #
 library(leaps) # Load the package #
 model_wf_subset <- regsubsets(log(y) ~ X1 + X2 + X3 +X4 + X5 + X6 + X7 + X8 + X9, data=table_wf, nbest=10 ) # nbest is the number of models from each size #
