--- a/static/assignment564/fe564.Rmd
+++ b/static/assignment564/fe564.Rmd
@@ -18,7 +18,7 @@ options(repos="https://cran.rstudio.com")
 
 The $(X'X)^{-1}$ for the $y=β_0+β_1 x_1+β_2 x_2+β_3 x_3+β_4 x_4+β_5 x_5+β_6 x_6+ε$ is given below.
 
-```{R, collapse=TRUE}
+```{R, include=F, collapse=TRUE}
 # Problem 3
 B<- data.frame(
    b0=c(3.694,	-2.166,	0.046,	-0.300,	-0.022,	-0.100,	0.023),
